<resources>
    <string name="app_name">ManagerStudent</string>
    <string name="manager_student">Quản lý sinh viên</string>
    <string name="manager_marks">Quản lý điểm</string>
    <string name="manager_subject">Quản lý môn học</string>
    <string name="app_title">Phần mềm quản lý sinh viên.</string>
    <string name="search">Tìm kiếm</string>
    <string name="add">Thêm</string>
    <string name="clear">Xóa</string>
    <string name="edit">Sửa</string>
    <string name="marks">Thêm điểm</string>
    <string name="update">Lưu thay đổi</string>
</resources>
