<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/app_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/colorPrimaryDark"
        style="@style/Lable_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_btn_manager_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Lable_text_normal"
            android:text="@string/manager_student"
            android:background="@drawable/circle_button"
            android:padding="7dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_btn_manager_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Lable_text_normal"
            android:text="@string/manager_subject"
            android:background="@drawable/circle_button"
            android:padding="7dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_btn_manager_marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Lable_text_normal"
            android:text="@string/manager_marks"
            android:background="@drawable/circle_button"
            android:padding="7dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>
    </LinearLayout>


</RelativeLayout>