<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Lable_text_normal"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:text="Tên học sinh" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/manager_st_ed_student_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    style="@style/Lable_text_normal"
                    android:padding="5dp"
                    android:background="@drawable/bg_border_round_white"
                    android:layout_centerVertical="true"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Lable_text_normal"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:text="Mã học sinh" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/manager_st_ed_student_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    style="@style/Lable_text_normal"
                    android:padding="5dp"
                    android:background="@drawable/bg_border_round_white"
                    android:layout_centerVertical="true"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Lable_text_normal"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:text="Ngày sinh" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/manager_st_ed_student_birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    style="@style/Lable_text_normal"
                    android:padding="5dp"
                    android:background="@drawable/bg_border_round_white"
                    android:layout_centerVertical="true"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Lable_text_normal"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:text="Quê quán" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/manager_st_ed_student_home_town"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    style="@style/Lable_text_normal"
                    android:padding="5dp"
                    android:background="@drawable/bg_border_round_white"
                    android:layout_centerVertical="true"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/manager_st_btn_search"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    style="@style/Lable_text_normal"
                    android:text="@string/search"
                    android:background="@drawable/circle_button"
                    android:padding="7dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/manager_st_btn_add"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    style="@style/Lable_text_normal"
                    android:text="@string/add"
                    android:background="@drawable/circle_button"
                    android:padding="7dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/manager_st_btn_clear"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    style="@style/Lable_text_normal"
                    android:text="@string/clear"
                    android:background="@drawable/circle_button"
                    android:padding="7dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/manager_st_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
